--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "crypto": "^1.0.1",
+    "express": "^4.17.1",
     "prompt": "^1.0.0",
-    "sha3": "^2.1.3"
+    "request": "^2.88.2",
+    "sha3": "^2.1.3",
+    "socket.io": "^3.0.3"
   }
 }
